refactor: WorkspaceCode UserID (#91)
